<resources>
    <string name="app_name">Area Officer</string>

    <string name="loading">Loading</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="location_permission">Location Permission</string>
    <string name="allow_location_permission">Allow Area Officer to access this device\'s location?</string>
    <string name="ok">OK</string>
    <string name="allow_info_permission">Allow Area Officer to access this device\'s information?</string>
    <string name="info_permission">Information Permission</string>
    <string name="storage_permission">Storage Permission</string>
    <string name="allow_storage_permission">Allow Area Officer to access this device\'s storage?</string>
    <string name="exit_app">Exit App</string>
    <string name="exit_message">Are you sure you want to exit the app?</string>
    <string name="select_scheme">Select scheme to give feedback</string>
    <string name="try_again">Please try again after sometime</string>
    <string name="select_location">Select location level to view the questions</string>
    <string name="answer_questions">Please save all labels</string>
    <string name="success">Success</string>
    <string name="data_upload_success">Data successfully Uploaded!!</string>
    <string name="enter_visit_details">Enter the visit details</string>
    <string name="welcome">Welcome</string>
    <string name="visit_create_success">Your visit id has been created.</string>
    <string name="choose_start_date">Choose Start Date</string>
    <string name="choose_end_date">Choose End Date</string>
    <string name="already_exists">Already Exists</string>
    <string name="start_date_first">Please choose start date first!</string>
    <string name="answer_all_questions">Please answer all questions!!</string>
    <string name="answer_all_questions1">Still not answered some questions, will you still want to proceed!!</string>
    <string name="data_saved">Data successfully saved!!</string>
    <string name="upload">Upload</string>
    <string name="uploaded">Uploaded</string>
    <string name="edit_select_old_visit">Edit/Select Old Visit</string>
    <string name="new_visit_details">New Visit Details</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="select_state">Select State</string>
    <string name="select_district">Select District</string>
    <string name="select_block">Select Block</string>
    <string name="select_panchayat">Select Panchyat</string>
    <string name="next">Next</string>
    <string name="area_officer_login">Area Officer Login</string>
    <string name="enter_mobile_number">Please enter your registered Mobile Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="verify">Verify</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_aware">Not Aware</string>
    <string name="sufficient">Sufficient</string>
    <string name="not_sufficient">Not Sufficient</string>
    <string name="residential">Residential</string>
    <string name="non_residential">Non-Residential</string>
    <string name="monthly">Monthly</string>
    <string name="quarterly">Quarterly</string>
    <string name="half_yearly">Half yearly</string>
    <string name="yearly">Yearly</string>
    <string name="improvement_needed">Improvement Needed</string>
    <string name="satisfactory">Satisfactory</string>
    <string name="unsatisfactoey">Unsatisfactory</string>
    <string name="notpaid"> Not paid</string>
    <string name="incomplete">Incomplete</string>
    <string name="notapplicable">Not Applicable</string>
    <string name="partial">Partial</string>
    <string name="notparticipated">Not participated</string>
    <string name="notaware"> Not Aware</string>
    <string name="good">Good</string>
    <string name="excellent">Excellent</string>
    <string name="otp_head1">A six-digit one-time password(OTP) has been sent to your number</string>
    <string name="otp_head2">Please check your SMS inbox and enter the OTP.</string>
    <string name="submit">Submit</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="block">Block</string>
    <string name="panchayat">Panchayat</string>
    <string name="error">Error</string>
    <string name="invalid_number">Invalid number</string>
    <string name="error_message">Please Check Your Internet Connection</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="designation">Designation</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="select_level">Select User Level</string>
</resources>
