<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.SignUpActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutUserMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp">


        <EditText
            android:id="@+id/etUserMobile"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:filterTouchesWhenObscured="true"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutDesignation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputLayoutUserMobile"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp">


        <EditText
            android:id="@+id/etDesignation"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:filterTouchesWhenObscured="true"
            android:hint="@string/designation"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputLayoutDesignation"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp">


        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:filterTouchesWhenObscured="true"
            android:hint="@string/name"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputLayoutName"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp">


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:filterTouchesWhenObscured="true"
            android:hint="@string/email"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/spUserLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputLayoutEmail"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:hint="@string/select_level"
        android:textColorHint="#05ab9a"
        android:textSize="16sp"
        app:met_floatingLabel="normal" />


    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/spState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spUserLevel"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:hint="@string/select_state"
        android:textColorHint="#05ab9a"
        android:textSize="16sp"
        app:met_floatingLabel="normal" />

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/spDistrict"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spState"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:hint="@string/select_district"
        android:textColorHint="#05ab9a"
        android:textSize="16sp"
        app:met_floatingLabel="normal" />

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/spBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spDistrict"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:hint="@string/select_block"
        android:textColorHint="#05ab9a"
        android:textSize="16sp"
        app:met_floatingLabel="normal" />


    <include
        android:id="@+id/tool"
        layout="@layout/header" />


</RelativeLayout>