<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <RelativeLayout
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/login_bg">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/enter_mobile_number"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="56dp"
            android:text="@string/area_officer_login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:clickable="false"
        app:srcCompat="@android:drawable/stat_sys_phone_call" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutUserMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/floatingActionButton"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp">


        <EditText
            android:id="@+id/etUserMobile"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:filterTouchesWhenObscured="true"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputLayoutUserMobile"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:layout_marginEnd="20dp"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_below="@+id/buttonVerify"
        android:text="Don't have an accout? Sign up" />

</RelativeLayout>