<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/otp_head1"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMobile"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/otp_head2"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.goodiebag.pinview.Pinview
        android:id="@+id/pinview"
        app:pinBackground="@drawable/example_drawable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:pinWidth="30dp"
        app:pinHeight="30dp"
        android:layout_below="@+id/textView6"

        app:pinLength="6"
        app:cursorVisible="false"
        app:forceKeyboard="true"
        app:hint="0"
        app:inputType="number"
        app:password="true"/>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_marginLeft="60dp"
        android:visibility="gone"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et1"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:filterTouchesWhenObscured="true"
            android:inputType="numberPassword"
            android:maxLength="1"

            android:maxLines="1" />

        <EditText
            android:id="@+id/et2"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:filterTouchesWhenObscured="true"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:maxLines="1" />

        <EditText
            android:id="@+id/et3"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:filterTouchesWhenObscured="true"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:maxLines="1" />

        <EditText
            android:id="@+id/et4"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:filterTouchesWhenObscured="true"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:maxLines="1" />

        <EditText
            android:id="@+id/et5"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:filterTouchesWhenObscured="true"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:maxLines="1" />

        <EditText
            android:id="@+id/et6"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:filterTouchesWhenObscured="true"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:maxLines="1" />

    </TableRow>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pinview"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</RelativeLayout>